# qzPlayer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build_arm64-v8a_apk.ps1  build_windows.ps1  gen_chinese_numbers_2.py  package_windows.ps1
Controls/md3/: CMakeLists.txt
Controls/md3/src/: Md3Button.qml  Md3CheckBox.qml  Md3ComboBox.qml  Md3Loader.qml  Md3Menu.qml  Md3MenuItem.qml  Md3MenuSeparator.qml  Md3Popup.qml  Md3RadioButton.qml  Md3ScrollBar.qml  Md3Slider.qml  Md3Switch.qml  Md3TabBar.qml  Md3TabButton.qml  Md3TextField.qml
Controls/md3/src/pr/: Md3CheckIndicator.qml  Md3SliderHandle.qml  Md3SwitchIndicator.qml
Controls/md3/src/shaders/: Loader.frag
examples/: AndroidMain.qml  CMakeLists.txt  WindowsMain.qml  main.cpp
examples/android/: AndroidManifest.xml
examples/android/res/drawable/: ic_launcher_foreground.xml
examples/android/res/values/: colors.xml  strings.xml
multimedia/: CMakeLists.txt  README.md  REUSE.toml
multimedia/cmake/: FindFFmpeg.cmake  FindWrapPulseAudio.cmake
multimedia/src/: CMakeLists.txt
multimedia/src/multimedia/: CMakeLists.txt  CachedValue_p.h  ChapterInfo.h  ErrorInfo_p.h  MediaDevices.cpp  MediaDevices.h  MediaFormat.cpp  MediaFormat.h  MediaInputEncoderInterface_p.h  MediaMetadata.cpp  MediaMetadata.h  MediaStorageLocation.cpp  MediaStorageLocation_p.h  MediaTimeRange.cpp  MediaTimeRange.h  MultimediaAssume_p.h  MultimediaEnumToStringConverter_p.h  MultimediaGlobal.h  MultimediaGlobal_p.h  MultimediaPch_p.h  MultimediaRanges_p.h  MultimediaUtils.cpp  MultimediaUtils_p.h  RhiValueMapper.cpp  RhiValueMapper_p.h  SharedHandle_p.h  SymbolsResolveUtils.cpp  SymbolsResolveUtils_p.h  TaggedTime_p.h  ThreadLocalRhi.cpp  ThreadLocalRhi_p.h  TrackInfo.h  VideoTransformation.cpp  VideoTransformation_p.h  qt_cmdline.cmake
multimedia/src/multimedia/android/: AAudioStream.cpp  AAudioStream_p.h  AndroidAudioDevice.cpp  AndroidAudioDevice_p.h  AndroidAudioDevices.cpp  AndroidAudioDevices_p.h  AndroidAudioJniTypes_p.h  AndroidAudioSink.cpp  AndroidAudioSink_p.h  AndroidAudioSource.cpp  AndroidAudioSource_p.h  AndroidAudioUtil.cpp  AndroidAudioUtil_p.h
multimedia/src/multimedia/audio/: Audio.h  AudioAlignmentSupport_p.h  AudioBuffer.cpp  AudioBuffer.h  AudioBufferOutput.cpp  AudioBufferOutput.h  AudioBufferOutput_p.h  AudioBufferSupport_p.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceMonitor.cpp  AudioDeviceMonitor_p.h  AudioDevice_p.h  AudioFormat.cpp  AudioFormat.h  AudioFormat_p.h  AudioHelpers.cpp  AudioHelpers_p.h  AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  AudioPlatformImplementationSupport_p.h  AudioQIODeviceSupport_p.h  AudioQSpanSupport_p.h  AudioRingBuffer_p.h  AudioRtsanSupport_p.h  AudioSink.cpp  AudioSink.h  AudioSource.cpp  AudioSource.h  AudioSpectrumAnalyzer.cpp  AudioSpectrumAnalyzer.h  AudioSystem.cpp  AudioSystemPlatformStreamSupport.cpp  AudioSystemPlatformStreamSupport_p.h  AudioSystem_p.h  AutoResetEventLinux.cpp  AutoResetEventLinux_p.h  AutoResetEventPipe.cpp  (+11 more)
multimedia/src/multimedia/platform/: PlatformAudioDevices.cpp  PlatformAudioDevices_p.h  PlatformAudioInput_p.h  PlatformAudioOutput_p.h  PlatformAudioResampler_p.h  PlatformMediaFormatInfo.cpp  PlatformMediaFormatInfo_p.h  PlatformMediaIntegration.cpp  PlatformMediaIntegration_p.h  PlatformMediaPlayer.cpp  PlatformMediaPlayer_p.h  PlatformMediaPlugin.cpp  PlatformMediaPlugin_p.h  PlatformPreviewFrameProvider_p.h  PlatformVideoSink.cpp  PlatformVideoSink_p.h  PlatformVideoSource.cpp  PlatformVideoSource_p.h
multimedia/src/multimedia/playback/: MediaPlayer.cpp  MediaPlayer.h  MediaPlayer_p.h  PlaybackOptions.cpp  PlaybackOptions.h  PreviewFrameProvider.cpp  PreviewFrameProvider.h  PreviewFrameProvider_p.h
multimedia/src/multimedia/portaudio/: PortAudioDevice.cpp  PortAudioDevice_p.h  PortAudioDevices.cpp  PortAudioDevices_p.h  PortAudioSink.cpp  PortAudioSink_p.h
multimedia/src/multimedia/shaders/: RhiTextureFormats_p.h  abgr.frag  argb.frag  ayuv.frag  bgra.frag  colorconvert.glsl  colortransfer.glsl  imc2.frag  (+26 more)
multimedia/src/multimediaquick/: CMakeLists.txt  MultimediaPlugin.cpp  QuickAudioVisualizer.cpp  QuickAudioVisualizer_p.h  QuickPreviewFrame.cpp  QuickPreviewFrame_p.h  QuickVideoOutput.cpp  QuickVideoOutput_p.h  SGAudioVisualizerNode.cpp  SGAudioVisualizerNode_p.h  SGVideoNode_p.cpp  SGVideoNode_p.h  SGVideoTexture.cpp  SGVideoTexture_p.h  qzmultimediaquickexports.h
multimedia/src/vulkancontext/: CMakeLists.txt  vulkancontext.cppm
player/: CMakeLists.txt
player/controls/: BubbleButton.qml  BubbleTip.qml  ChapterDelegate.qml  ChapterPanel.qml  IconButton.qml  KeyButton.qml  LoadingOverlay.qml  MiniModeOverlay.qml  NotificationBar.qml  PlayerSlider.qml  PlayerState.qml  PlaylistDelegate.qml  PlaylistPanel.qml  RoundedImage.qml  SeekFrame.qml  SettingsBubble.qml  SlidePanel.qml
player/desktop/: PlayerControl.qml  PlayerTitleBar.qml  PlayerWindow.qml
player/mobile/: PlayerControl.qml  PlayerTitleBar.qml  PlayerWindow.qml
player/shaders/: RoundedImage.frag  RoundedImage.vert
player/utils/: AndroidUtils.cpp  AndroidUtils.hpp  CoverArtItem.cpp  CoverArtItem.hpp  FileDropArea.cpp  FileDropArea.hpp  HotkeyManager.cpp  HotkeyManager.hpp  InputMonitor.cpp  InputMonitor.hpp  KmeansColors.cppm  NotificationManager.cpp  NotificationManager.hpp  PlayerSet.cpp  PlayerSet.hpp  PlaylistModel.cpp  PlaylistModel.hpp  Settings.cpp  Settings.hpp  SvgRenderer.cpp  SvgRenderer.hpp  VulkanWindowInitializer.cpp  VulkanWindowInitializer.hpp  qml_register_types.cppm  qzPlayer_export.hpp
player/utils/test_module/: Test1Item.cppm  Test2Item.cppm
qzLog/: CMakeLists.txt  qzLog.cppm  qzLogQt.cppm
qzTheme/: CMakeLists.txt  Theme.qml
qzTheme/module/: ThemeConfig.cpp  ThemeConfig.hpp  ThemeTypes.cppm  ThemeTypes.hpp  qml_register_types.cppm  qzTheme.cppm  qzTheme_export.hpp
qzTheme/module/backend/: AndroidBackend.cppm  Backend.cppm  IBackend.cppm  LinuxBackend.cppm  ThemeBackend.cppm  WindowsBackend.cppm
qzTheme/module/core/: AndroidBackend.cpp  LinuxBackend.cpp  WindowsBackend.cpp
(+199 files in other folders)
